--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <title>YOUTI | Portfolio</title>
+    <title>YOURI | Portfolio</title>
 </head>
 <body>
     <nav id="nav" class="nav">
